[gd_scene load_steps=6 format=3 uid="uid://bmwwquv5462ej"]

[ext_resource type="Script" uid="uid://redy1phqust6" path="res://Scripts/board_item.gd" id="1_npdx3"]
[ext_resource type="Texture2D" uid="uid://bywmxtcyqv8jt" path="res://Sprites/Fish Pack/PNG/Large/kenney_fish-pack_2/PNG/Default/fish_blue.png" id="2_npdx3"]
[ext_resource type="Texture2D" uid="uid://854xp7f183he" path="res://Sprites/Fish Pack/PNG/Large/kenney_fish-pack_2/PNG/Default/fish_brown.png" id="3_ak7mi"]
[ext_resource type="Texture2D" uid="uid://cyl6rredcb3ij" path="res://Sprites/Fish Pack/PNG/Large/kenney_fish-pack_2/PNG/Default/fish_green.png" id="4_6c1ob"]
[ext_resource type="Texture2D" uid="uid://clvbdrlg0bcih" path="res://Sprites/Fish Pack/PNG/Large/kenney_fish-pack_2/PNG/Default/fish_orange.png" id="5_idbb8"]

[node name="BoardItem" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_right = 200.0
offset_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_npdx3")

[node name="BlueFish" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_npdx3")
expand_mode = 3
stretch_mode = 5

[node name="BrownFish" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_ak7mi")
expand_mode = 3
stretch_mode = 5

[node name="GreenFish" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_6c1ob")
expand_mode = 3
stretch_mode = 5

[node name="OrangeFish" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("5_idbb8")
expand_mode = 3
stretch_mode = 5
